<resources>
    <string name="app_name">SportsDBAndroidClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_leagues">Bajnokságok</string>

    <string name="title_activity_leagues">Leagues</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_results">Results</string>
    <string name="league_position">H</string>
    <string name="league_team_name">Név</string>
    <string name="league_played_matches">M</string>
    <string name="league_win">Gy</string>
    <string name="league_draw">D</string>
    <string name="league_loss">V</string>
    <string name="league_points">P</string>
    <string name="league_form">Forma</string>
    <string-array name="leagues_array">
        <item>Ligue 1</item>
        <item>Serie A</item>
        <item>Bundesliga</item>
        <item>La Liga</item>
        <item>Premier League</item>
    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_results">Eredmények</string>
    <string name="league">Bajnokság</string>
    <string name="results">Eredmények</string>
    <string name="result">Eredmény</string>
</resources>