<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.leagues.LeaguesActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/Theme.SportsDBAndroidClient.AppBarOverlay"
        app:popupTheme="@style/Theme.SportsDBAndroidClient.PopupOverlay"/>
    <Spinner
        android:id="@+id/leagues_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="35dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/league_table"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1">

                <TableRow
                    android:layout_marginBottom="7dp"
                    android:background="#FFE6E6E6">

                    <TextView
                        android:padding="3dip"
                        android:text="@string/league_position" />
                    <TextView
                        android:padding="3dip"
                        android:text="@string/league_team_name" />
                    <TextView
                        android:padding="3dip"
                        android:text="@string/league_played_matches" />
                    <TextView
                        android:padding="3dip"
                        android:text="@string/league_win" />
                    <TextView
                        android:padding="3dip"
                        android:text="@string/league_draw" />
                    <TextView
                        android:padding="3dip"
                        android:text="@string/league_loss" />
                    <TextView
                        android:padding="3dip"
                        android:text="@string/league_points" />

                </TableRow>

            </TableLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>